# andro

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
crates/andro/: Cargo.toml
crates/andro-adb/: Cargo.toml
crates/andro-adb/src/: lib.rs  ops.rs
crates/andro-axml/: Cargo.toml
crates/andro-axml/src/: lib.rs
crates/andro-build/: Cargo.toml
crates/andro-build/src/: apk.rs  lib.rs  size.rs
crates/andro-core/: Cargo.toml
crates/andro-core/src/: config.rs  device.rs  error.rs  lib.rs  mocks.rs  traits.rs  types.rs
crates/andro-dex/: Cargo.toml
crates/andro-dex/src/: lib.rs
crates/andro-farm/: Cargo.toml
crates/andro-farm/src/: discovery.rs  inventory.rs  lib.rs
crates/andro-fleet/: Cargo.toml
crates/andro-fleet/src/: lib.rs
crates/andro-gos/: Cargo.toml
crates/andro-gos/src/: lib.rs
crates/andro-health/: Cargo.toml
crates/andro-health/src/: lib.rs
crates/andro-hw/: Cargo.toml
crates/andro-hw/src/: boot.rs  fastboot.rs  lib.rs
crates/andro-log/: Cargo.toml
crates/andro-log/src/: crash.rs  lib.rs  parser.rs  store.rs
crates/andro-manifest/: Cargo.toml
crates/andro-manifest/src/: lib.rs
crates/andro-sec/: Cargo.toml
crates/andro-sec/src/: lib.rs  permissions.rs  rules.rs  scanner.rs
crates/andro-settings/: Cargo.toml
crates/andro-settings/src/: lib.rs
crates/andro-sign/: Cargo.toml
crates/andro-sign/src/: lib.rs
crates/andro-sync/: Cargo.toml
crates/andro-sync/src/: lib.rs  manifest.rs  media.rs  sync.rs
crates/andro/src/: main.rs  mcp.rs
docs/: cli-reference.md  mcp-tools.md
module/: default.nix
