[workspace]
resolver = "2"
members = [
  "crates/andro",
  "crates/andro-core",
  "crates/andro-adb",
  "crates/andro-sync",
  "crates/andro-log",
  "crates/andro-build",
  "crates/andro-sec",
  "crates/andro-farm",
  "crates/andro-hw",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/andro"
homepage = "https://github.com/pleme-io/andro"

[workspace.dependencies]
# Internal crates
andro-core = { path = "crates/andro-core", version = "0.1.0" }
andro-adb = { path = "crates/andro-adb", version = "0.1.0" }
andro-sync = { path = "crates/andro-sync", version = "0.1.0" }
andro-log = { path = "crates/andro-log", version = "0.1.0" }
andro-build = { path = "crates/andro-build", version = "0.1.0" }
andro-sec = { path = "crates/andro-sec", version = "0.1.0" }
andro-farm = { path = "crates/andro-farm", version = "0.1.0" }
andro-hw = { path = "crates/andro-hw", version = "0.1.0" }

# pleme-io libraries
fudajiku = { git = "https://github.com/pleme-io/fudajiku" }

# ADB
adb_client = "3.1"

# USB
nusb = "0.1"

# APK analysis
zip = "2"

# Hashing
blake3 = "1"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# MCP
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Regex
regex = "1"

# Directories
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
