[package]
name = "andro-adb"
description = "Device operations: list, info, shell, install via ADB TCP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
adb_client.workspace = true
serde.workspace = true
