[package]
name = "andro-build"
description = "APK/AAB analysis, size tracking, DEX parsing, binary diffing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zip.workspace = true
axmldecoder.workspace = true
rusqlite.workspace = true
blake3.workspace = true
