[package]
name = "andro-core"
description = "Core types, device model, config, and error types for andro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
blake3.workspace = true
