[package]
name = "andro-farm"
description = "Device farm: USB discovery, inventory, health polling, provisioning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
andro-adb.workspace = true
mochizuki.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
nusb.workspace = true
rusqlite.workspace = true
chrono.workspace = true
