[package]
name = "andro-health"
description = "Device health monitoring — battery, storage, memory, CPU temperature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
