[package]
name = "andro-log"
description = "Persistent logcat with FTS search, crash/ANR extraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
regex.workspace = true
chrono.workspace = true
