[package]
name = "andro-manifest"
description = "AndroidManifest.xml lint rules — security and best-practice checks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
andro-axml.workspace = true
serde.workspace = true
serde_json.workspace = true
