[package]
name = "andro-sync"
description = "File transfer: BLAKE3 delta sync, incremental backup, media organization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
andro-core.workspace = true
adb_client.workspace = true
fudajiku.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true
walkdir.workspace = true
glob.workspace = true
indicatif.workspace = true
chrono.workspace = true

[dependencies.exif]
package = "kamadak-exif"
version = "0.6"
